--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "personal-finance-tracker",
   "private": true,
   "version": "0.1.0",
+  "engines": {
+  "node": ">=18 <21"
+}
+
   "type": "module",
   "scripts": {
     "dev": "vite",
